--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -15,8 +15,8 @@
 				<rs-module id="rev_slider_1_1" style="display:none;" data-version="6.1.2">
 					<rs-slides>
                        {% for banniere in banners %}
-						<rs-slide data-key="rs-1" data-title="Slide" data-thumb="{{ asset('Bannieres/'~banniere.path) }}" data-anim="ei:d;eo:d;s:600;r:0;t:fade;sl:7;">
-							<img src="{{ asset('Bannieres/'~banniere.path) }}" title="Home" data-bg="p:center top;" class="rev-slidebg" data-no-retina>
+						<rs-slide data-key="rs-1" data-title="Slide" data-thumb="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_bg-100x50.jpg" data-anim="ei:d;eo:d;s:600;r:0;t:fade;sl:7;">
+							<img src="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_bg.jpg" title="Home" data-bg="p:center top;" class="rev-slidebg" data-no-retina>
 <!--
 							--><rs-layer
 								id="slider-1-slide-1-layer-1" 
@@ -111,8 +111,146 @@ cleaning services
 					</rs-slides>
 					<rs-progress class="rs-bottom" style="visibility: hidden !important;"></rs-progress>
 				</rs-module>
-      
+      <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="classicslider1" style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
+              <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
+              <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
+                  <ul>
+                     {% for banniere in banners %}
 
+
+
+                     
+                      <!-- SLIDE -->
+                      <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="{{ asset('Bannieres/'~banniere.path) }}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+                       
+                       
+							--><rs-layer
+								id="slider-1-slide-1-layer-1" 
+								data-type="image"
+								data-rsp_ch="on"
+								data-xy="x:r;xo:50px;y:b;yo:-100px;"
+								data-text="l:22;"
+								data-dim="w:546;h:767;"
+								data-frame_0="tp:600;"
+								data-frame_1="tp:600;st:500;sp:800;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:5;"
+							><img src="https:///themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slide1.png" width="546" height="767" data-no-retina> 
+							</rs-layer><!--
+
+							--><rs-layer
+								id="slider-1-slide-1-layer-2" 
+								class="mfnrscleanerlargedark"
+								data-type="text"
+								data-color="rgba(7,78,151,1)"
+								data-rsp_ch="on"
+								data-xy="x:30px;y:c;yo:-90px;"
+								data-text="s:62;l:60;fw:500;"
+								data-frame_0="x:50px;tp:600;"
+								data-frame_1="tp:600;st:1200;sp:800;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:6;font-family:Ubuntu;text-shadow:none;"
+							>Professional<br />
+cleaning services 
+							</rs-layer><!--
+
+							--><rs-layer
+								id="slider-1-slide-1-layer-3" 
+								class="mfnrscleanermediumdark"
+								data-type="text"
+								data-color="rgba(104,115,116,1)"
+								data-rsp_ch="on"
+								data-xy="x:30px;y:c;yo:30px;"
+								data-text="s:20;l:30;fw:300;"
+								data-frame_0="x:50px;tp:600;"
+								data-frame_1="tp:600;st:1700;sp:800;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:7;font-family:Ubuntu;text-shadow:none;"
+							>Version proin gravida nibh vel velit auctor aliquet.<br />Aenean sollicitudin, lorem quis bibendum. 
+							</rs-layer><!--
+
+							--><rs-layer
+								id="slider-1-slide-1-layer-4" 
+								data-type="text"
+								data-color="rgba(255,255,255,1)"
+								data-rsp_ch="on"
+								data-xy="x:30px;y:c;yo:130px;"
+								data-text="l:22;"
+								data-frame_0="x:50px;tp:600;"
+								data-frame_1="rZ:inherit;tp:600;st:2300;sp:800;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:8;"
+							><a class="button  button_size_2" href="#" style="background-color:#f5d35b!important;color:#98631d;"    ><span class="button_label">See offer</span></a>
+ 
+							</rs-layer><!--
+
+							--><rs-layer
+								id="slider-1-slide-1-layer-5" 
+								data-type="image"
+								data-rsp_ch="on"
+								data-xy="x:c;xo:-123px;y:c;yo:-172px;"
+								data-text="l:22;"
+								data-dim="w:102;h:86;"
+								data-frame_0="tp:600;"
+								data-frame_1="tp:600;st:2500;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:9;"
+							><img src="https://themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_1.png" width="102" height="86" data-no-retina> 
+							</rs-layer><!--
+
+							--><rs-layer
+								id="slider-1-slide-1-layer-6" 
+								data-type="image"
+								data-rsp_ch="on"
+								data-xy="x:-35px;y:c;yo:-179px;"
+								data-text="l:22;"
+								data-dim="w:80;h:68;"
+								data-frame_0="tp:600;"
+								data-frame_1="tp:600;st:2800;"
+								data-frame_999="st:w;auto:true;"
+								style="z-index:10;"
+							><img src="https:///themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_2.png" width="80" height="68" data-no-retina> 
+							</rs-layer>
+                            
+                    
+                        <!-- LAYERS -->
+        <!-- 
+                      
+                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-152']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">Le 29 Mars 2022 à Paris
+                          </div>
+
+
+                 
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-40','-40','-40','-42']" data-fontsize="['80','80','80','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">Conférence IFDE
+                        </div>
+                    
+                        <div class="tp-caption Gym-Subline tp-resizeme" id="slide-44-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','1']" data-fontsize="['20','20','20','8']" data-lineheight="['30','30','30','20']" data-fontweight="['100','100','100','400']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 8; white-space: nowrap; font-family: Arial;  font-weight: 200;">En Partenariat avec Sigmaformations
+                        </div>
+
+                     
+                        <div class="tp-caption Gym-Subline tp-resizeme" id="slide-44-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['71','71','71','51']" data-fontsize="['30','30','30','15']" data-lineheight="['30','30','30','20']" data-fontweight="['100','100','100','400']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 8; white-space: nowrap; font-family: Arial;  font-weight: 200;">A L'ÈRE DE LA CRYPTOMONNAIE
+                        </div>
+  
+       -->     
+
+                        <!-- LAYER NR. 4 -->
+                  
+                    </li>
+                    {% endfor %}
+                 
+        
+      
+                  </ul>
+                  <div class="tp-static-layers"></div>
+                  <div class="tp-bannertimer" style="height: 7px; background-color: rgba(255, 255, 255, 0.25);"></div>
+              </div>
+          
+          
+            </div>
+
+</div>
 
 
     <div class="index-1">
@@ -412,84 +550,5 @@ cleaning services
           }
       }); /*ready*/
   </script>
-	<script type="text/javascript">
-					setREVStartSize({c: 'rev_slider_1_1',rl:[1240,1024,778,480],el:[],gw:[1176],gh:[750],layout:'fullwidth',mh:"0"});
-					var	revapi1,
-						tpj;
-					jQuery(function() {
-						tpj = jQuery;
-						tpj.noConflict();
-						if(tpj("#rev_slider_1_1").revolution == undefined){
-							revslider_showDoubleJqueryError("#rev_slider_1_1");
-						}else{
-							revapi1 = tpj("#rev_slider_1_1").show().revolution({
-								jsFileLocation:"https://themes.muffingroup.com/be/cleaner/wp-content/plugins/revslider/public/assets/js/",
-								duration:5000,
-								visibilityLevels:"1240,1024,778,480",
-								gridwidth:1176,
-								gridheight:750,
-								spinner:"spinner2",
-								responsiveLevels:"1240,1024,778,480",
-								disableProgressBar:"on",
-								navigation: {
-									mouseScrollNavigation:false,
-									touch: {
-										touchenabled:true
-									},
-									arrows: {
-										enable:true,
-										style:"uranus",
-										left: {
-											v_align:"bottom",
-											h_offset:40,
-											v_offset:40
-										},
-										right: {
-											v_align:"bottom",
-											h_offset:40,
-											v_offset:40
-										}
-									}
-								},
-								fallbacks: {
-									allowHTML5AutoPlayOnAndroid:true
-								},
-							});
-						}
-						
-					});
-				</script>
-				<script>
-					var htmlDivCss = ' #rev_slider_1_1_wrapper rs-loader.spinner2{ background-color: #FFFFFF !important; } '
-					var htmlDiv = document.getElementById('rs-plugin-settings-inline-css');
-					if(htmlDiv) {
-						htmlDiv.innerHTML = htmlDiv.innerHTML + htmlDivCss;
-					}else{
-						var htmlDiv = document.createElement('div');
-						htmlDiv.innerHTML = '<style>' + htmlDivCss + '</style>';
-						document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
-					}
-				</script>
-				<script>
-					var htmlDivCss = unescape("%23rev_slider_1_1_wrapper%20.uranus.tparrows%20%7B%0A%20%20width%3A50px%3B%0A%20%20height%3A50px%3B%0A%20%20background%3Argba%28255%2C255%2C255%2C0%29%3B%0A%20%7D%0A%20%23rev_slider_1_1_wrapper%20.uranus.tparrows%3Abefore%20%7B%0A%20width%3A50px%3B%0A%20height%3A50px%3B%0A%20line-height%3A50px%3B%0A%20font-size%3A40px%3B%0A%20transition%3Aall%200.3s%3B%0A-webkit-transition%3Aall%200.3s%3B%0A%20%7D%0A%20%0A%20%20%23rev_slider_1_1_wrapper%20.uranus.tparrows%3Ahover%3Abefore%20%7B%0A%20%20%20%20opacity%3A0.75%3B%0A%20%20%7D%0A");
-					var htmlDiv = document.getElementById('rs-plugin-settings-inline-css');
-					if(htmlDiv) {
-						htmlDiv.innerHTML = htmlDiv.innerHTML + htmlDivCss;
-					}else{
-						var htmlDiv = document.createElement('div');
-						htmlDiv.innerHTML = '<style>' + htmlDivCss + '</style>';
-						document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
-					}
-				</script>
-				<script>
-					var htmlDivCss = unescape("%0A%0A");
-					var htmlDiv = document.getElementById('rs-plugin-settings-inline-css');
-					if(htmlDiv) {
-						htmlDiv.innerHTML = htmlDiv.innerHTML + htmlDivCss;
-					}else{
-						var htmlDiv = document.createElement('div');
-						htmlDiv.innerHTML = '<style>' + htmlDivCss + '</style>';
-						document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
-					}
-				</script>
+
 {% endblock %}
