--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -12,105 +12,7 @@
 <div class="header-overflow" id="header-overflow"></div>
 <main>
 		<rs-module-wrap id="rev_slider_1_1_wrapper" data-source="gallery" style="padding:0;margin:0px auto;margin-top:0;margin-bottom:0;max-width:">
-				<rs-module id="rev_slider_1_1" style="display:none;" data-version="6.1.2">
-					<rs-slides>
-                       {% for banniere in banners %}
-						<rs-slide data-key="rs-1" data-title="Slide" data-thumb="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_bg-100x50.jpg" data-anim="ei:d;eo:d;s:600;r:0;t:fade;sl:7;">
-							<img src="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_bg.jpg" title="Home" data-bg="p:center top;" class="rev-slidebg" data-no-retina>
-<!--
-							--><rs-layer
-								id="slider-1-slide-1-layer-1" 
-								data-type="image"
-								data-rsp_ch="on"
-								data-xy="x:r;xo:50px;y:b;yo:-100px;"
-								data-text="l:22;"
-								data-dim="w:546;h:767;"
-								data-frame_0="tp:600;"
-								data-frame_1="tp:600;st:500;sp:800;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:5;"
-							><img src="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slide1.png" width="546" height="767" data-no-retina> 
-							</rs-layer><!--
 
-							--><rs-layer
-								id="slider-1-slide-1-layer-2" 
-								class="mfnrscleanerlargedark"
-								data-type="text"
-								data-color="rgba(7,78,151,1)"
-								data-rsp_ch="on"
-								data-xy="x:30px;y:c;yo:-90px;"
-								data-text="s:62;l:60;fw:500;"
-								data-frame_0="x:50px;tp:600;"
-								data-frame_1="tp:600;st:1200;sp:800;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:6;font-family:Ubuntu;text-shadow:none;"
-							>Professional<br />
-cleaning services 
-							</rs-layer><!--
-
-							--><rs-layer
-								id="slider-1-slide-1-layer-3" 
-								class="mfnrscleanermediumdark"
-								data-type="text"
-								data-color="rgba(104,115,116,1)"
-								data-rsp_ch="on"
-								data-xy="x:30px;y:c;yo:30px;"
-								data-text="s:20;l:30;fw:300;"
-								data-frame_0="x:50px;tp:600;"
-								data-frame_1="tp:600;st:1700;sp:800;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:7;font-family:Ubuntu;text-shadow:none;"
-							>Version proin gravida nibh vel velit auctor aliquet.<br />Aenean sollicitudin, lorem quis bibendum. 
-							</rs-layer><!--
-
-							--><rs-layer
-								id="slider-1-slide-1-layer-4" 
-								data-type="text"
-								data-color="rgba(255,255,255,1)"
-								data-rsp_ch="on"
-								data-xy="x:30px;y:c;yo:130px;"
-								data-text="l:22;"
-								data-frame_0="x:50px;tp:600;"
-								data-frame_1="rZ:inherit;tp:600;st:2300;sp:800;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:8;"
-							><a class="button  button_size_2" href="#" style="background-color:#f5d35b!important;color:#98631d;"    ><span class="button_label">See offer</span></a>
- 
-							</rs-layer><!--
-
-							--><rs-layer
-								id="slider-1-slide-1-layer-5" 
-								data-type="image"
-								data-rsp_ch="on"
-								data-xy="x:c;xo:-123px;y:c;yo:-172px;"
-								data-text="l:22;"
-								data-dim="w:102;h:86;"
-								data-frame_0="tp:600;"
-								data-frame_1="tp:600;st:2500;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:9;"
-							><img src="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_1.png" width="102" height="86" data-no-retina> 
-							</rs-layer><!--
-
-							--><rs-layer
-								id="slider-1-slide-1-layer-6" 
-								data-type="image"
-								data-rsp_ch="on"
-								data-xy="x:-35px;y:c;yo:-179px;"
-								data-text="l:22;"
-								data-dim="w:80;h:68;"
-								data-frame_0="tp:600;"
-								data-frame_1="tp:600;st:2800;"
-								data-frame_999="st:w;auto:true;"
-								style="z-index:10;"
-							><img src="//themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_2.png" width="80" height="68" data-no-retina> 
-							</rs-layer><!--
--->						</rs-slide>
-    {% endfor %}
-					
-					</rs-slides>
-					<rs-progress class="rs-bottom" style="visibility: hidden !important;"></rs-progress>
-				</rs-module>
       <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="classicslider1" style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
               <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
               <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
@@ -126,31 +28,17 @@ cleaning services
                         <img src="{{ asset('Bannieres/'~banniere.path) }}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
                        
 
-                            <rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 944px; top: 83px; z-index: 5; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-1" data-type="image" data-rsp_ch="on" data-xy="x:r;xo:50px;y:b;yo:-100px;" data-text="l:22;" data-dim="w:546;h:767;" data-frame_0="tp:600;" data-frame_1="tp:600;st:500;sp:800;" data-frame_999="st:w;auto:true;" style="z-index: 5; visibility: visible; overflow: hidden; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(255, 255, 255); width: 546px; height: 767px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" class="rs-layer" data-idcheck="true" data-stylerecorder="true" data-initialised="true"><img src="https://themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slide1.png" width="546" height="767" data-no-retina="" data-stylerecorder="true" style="height: 100%; width: 100%; text-align: left; line-height: 25px; letter-spacing: 0px; font-weight: 400; font-size: 13px; border-color: rgb(255, 255, 255); border-style: none; margin: 0px; border-radius: 0px; padding: 0px;"> 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
-
-							--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 394px; top: 225px; z-index: 6; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-2" class="mfnrscleanerlargedark rs-layer" data-type="text" data-color="rgba(7,78,151,1)" data-rsp_ch="on" data-xy="x:30px;y:c;yo:-90px;" data-text="s:62;l:60;fw:500;" data-frame_0="x:50px;tp:600;" data-frame_1="tp:600;st:1200;sp:800;" data-frame_999="st:w;auto:true;" style="z-index: 6; font-family: Ubuntu; text-shadow: none; visibility: visible; text-align: left; line-height: 60px; letter-spacing: 0px; font-weight: 500; font-size: 62px; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(7, 78, 151); text-decoration: none; white-space: nowrap; width: auto; height: auto; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" data-idcheck="true" data-stylerecorder="true" data-initialised="true">Professional<br>
-cleaning services 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
-
-							--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 394px; top: 375px; z-index: 7; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-3" class="mfnrscleanermediumdark rs-layer" data-type="text" data-color="rgba(104,115,116,1)" data-rsp_ch="on" data-xy="x:30px;y:c;yo:30px;" data-text="s:20;l:30;fw:300;" data-frame_0="x:50px;tp:600;" data-frame_1="tp:600;st:1700;sp:800;" data-frame_999="st:w;auto:true;" style="z-index: 7; font-family: Ubuntu; text-shadow: none; visibility: visible; text-align: left; line-height: 30px; letter-spacing: 0px; font-weight: 300; font-size: 20px; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(104, 115, 116); text-decoration: none; white-space: nowrap; width: auto; height: auto; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" data-idcheck="true" data-stylerecorder="true" data-initialised="true">Version proin gravida nibh vel velit auctor aliquet.<br>Aenean sollicitudin, lorem quis bibendum. 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
-
-							--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 394px; top: 482px; z-index: 8; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-4" data-type="text" data-color="rgba(255,255,255,1)" data-rsp_ch="on" data-xy="x:30px;y:c;yo:130px;" data-text="l:22;" data-frame_0="x:50px;tp:600;" data-frame_1="rZ:inherit;tp:600;st:2300;sp:800;" data-frame_999="st:w;auto:true;" style="z-index: 8; visibility: visible; text-align: left; line-height: 22px; letter-spacing: 0px; font-weight: 400; font-size: 20px; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(255, 255, 255); text-decoration: none; white-space: nowrap; width: auto; height: auto; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" class="rs-layer" data-idcheck="true" data-stylerecorder="true" data-initialised="true"><a class="button  button_size_2" href="#" style="color: rgb(152, 99, 29); background-color: rgb(245, 211, 91) !important; text-align: left; line-height: 22px; letter-spacing: 0px; font-weight: 400; font-size: 20px; border-color: rgb(152, 99, 29); border-style: none; margin: 0px; border-radius: 5px; padding: 10px 20px;" data-stylerecorder="true"><span class="button_label" data-stylerecorder="true" style="text-align: left; line-height: 22px; letter-spacing: 0px; font-weight: 400; font-size: 20px; border-color: rgb(152, 99, 29); border-style: none; margin: 0px; border-radius: 0px; padding: 0px;">See offer</span></a>
- 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
-
-							--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 778px; top: 160px; z-index: 9; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-5" data-type="image" data-rsp_ch="on" data-xy="x:c;xo:-123px;y:c;yo:-172px;" data-text="l:22;" data-dim="w:102;h:86;" data-frame_0="tp:600;" data-frame_1="tp:600;st:2500;" data-frame_999="st:w;auto:true;" style="z-index: 9; visibility: visible; overflow: hidden; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(255, 255, 255); width: 102px; height: 86px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" class="rs-layer" data-idcheck="true" data-stylerecorder="true" data-initialised="true"><img src="https://themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_1.png" width="102" height="86" data-no-retina="" data-stylerecorder="true" style="height: 100%; width: 100%; text-align: left; line-height: 25px; letter-spacing: 0px; font-weight: 400; font-size: 13px; border-color: rgb(255, 255, 255); border-style: none; margin: 0px; border-radius: 0px; padding: 0px;"> 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap><!--
-
-							--><rs-layer-wrap class="rs-parallax-wrap" style="position: absolute; display: block; pointer-events: auto; left: 329px; top: 162px; z-index: 10; visibility: visible;"><rs-loop-wrap style="position:absolute;display:block;"><rs-mask-wrap style="position: absolute; display: block; visibility: visible; overflow: visible;"><rs-layer id="slider-1-slide-1-layer-6" data-type="image" data-rsp_ch="on" data-xy="x:-35px;y:c;yo:-179px;" data-text="l:22;" data-dim="w:80;h:68;" data-frame_0="tp:600;" data-frame_1="tp:600;st:2800;" data-frame_999="st:w;auto:true;" style="z-index: 10; visibility: visible; overflow: hidden; border-color: rgb(93, 117, 119); border-style: none; margin: 0px; border-radius: 0px; padding: 0px; color: rgb(255, 255, 255); width: 80px; height: 68px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;" class="rs-layer" data-idcheck="true" data-stylerecorder="true" data-initialised="true"><img src="https://themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slider_stars_2.png" width="80" height="68" data-no-retina="" data-stylerecorder="true" style="height: 100%; width: 100%; text-align: left; line-height: 25px; letter-spacing: 0px; font-weight: 400; font-size: 13px; border-color: rgb(255, 255, 255); border-style: none; margin: 0px; border-radius: 0px; padding: 0px;"> 
-							</rs-layer></rs-mask-wrap></rs-loop-wrap></rs-layer-wrap>
+	
                     
                         <!-- LAYERS -->
-        <!-- 
-                      
-                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-152']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">Le 29 Mars 2022 à Paris
+
+
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-152']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">Le 29 Mars 2022 à Paris
+                         <img src="https://themes.muffingroup.com/be/cleaner/wp-content/uploads/2015/01/home_cleaner_slide1.png" width="546" height="767" data-no-retina> 
+                         
                           </div>
+                      
+                
 
 
                  
@@ -164,7 +52,7 @@ cleaning services
                         <div class="tp-caption Gym-Subline tp-resizeme" id="slide-44-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['71','71','71','51']" data-fontsize="['30','30','30','15']" data-lineheight="['30','30','30','20']" data-fontweight="['100','100','100','400']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 8; white-space: nowrap; font-family: Arial;  font-weight: 200;">A L'ÈRE DE LA CRYPTOMONNAIE
                         </div>
   
-       -->     
+ 
 
                         <!-- LAYER NR. 4 -->
                   
