--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -17,10 +17,7 @@
               <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
               <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
                   <ul>
-                     {% for banniere in banners %}
-
-
-
+      
                      
                       <!-- SLIDE -->
                       <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
@@ -44,7 +41,7 @@
                  
                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['-30','-30','-30','-30']" data-y="['0','-50','-50','320']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">LE PACK
                         </div>
-     <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','370']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">    ÉCONOMIQUE
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','370']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">    ÉCONOMIQUE
                         </div>
                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['120','-20','-20','420']" data-voffset="['0','0','0','0']" data-fontsize="['20','20','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">  pour un site web simple et rapide.
                         </div>
@@ -59,9 +56,79 @@
                      
                     </li>
 
+                  <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="{{asset('ban1.png')}}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+                       
 
-                    {% endfor %}
+	
+                    
+                        <!-- LAYERS -->
+
+
+                         <div class="tp-caption Gym-Display " id="slide-44-layer-3" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('pack1.png')}}" width="500" height="500"> 
+                         
+                          </div>
+                      
+                
+
+
                  
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['-30','-30','-30','-30']" data-y="['0','-50','-50','320']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">LE PACK
+                        </div>
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','370']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">    ÉCONOMIQUE
+                        </div>
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['120','-20','-20','420']" data-voffset="['0','0','0','0']" data-fontsize="['20','20','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">  pour un site web simple et rapide.
+                        </div>
+                  
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['200','70','70','490']" data-voffset="['0','0','0','0']" data-fontsize="['17','17','17','20']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 400; margin-top:0px;width: 100%;    line-height: 20px; "> <span style="background: white;color:#2854b7; padding: 15px;    display: block; text-align:center;    line-height: 20px;"> Voir plus de détails </span> 
+                        </div>
+                     
+                  
+
+                 
+
+                     
+                    </li>
+
+                                      <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="{{asset('ban2.png')}}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+                       
+
+	
+                    
+                        <!-- LAYERS -->
+
+
+                         <div class="tp-caption Gym-Display " id="slide-44-layer-3" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('pack1.png')}}" width="500" height="500"> 
+                         
+                          </div>
+                      
+                
+
+
+                 
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['-30','-30','-30','-30']" data-y="['0','-50','-50','320']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">LE PACK
+                        </div>
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','370']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">    ÉCONOMIQUE
+                        </div>
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['120','-20','-20','420']" data-voffset="['0','0','0','0']" data-fontsize="['20','20','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">  pour un site web simple et rapide.
+                        </div>
+                  
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['200','70','70','490']" data-voffset="['0','0','0','0']" data-fontsize="['17','17','17','20']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 400; margin-top:0px;width: 100%;    line-height: 20px; "> <span style="background: white;color:#2854b7; padding: 15px;    display: block; text-align:center;    line-height: 20px;"> Voir plus de détails </span> 
+                        </div>
+                     
+                  
+
+                 
+
+                     
+                    </li>
+
+               
         
       
                   </ul>
