--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -21,9 +21,9 @@
                      
    
 
-                  <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
+                   <li data-index="rs-1" data-slotamount="6"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="{{asset('ban1.jpg')}}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+                        <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center" data-kenburns="off"  class="rev-slidebg" data-no-retina>
                        
 
 	
@@ -31,8 +31,8 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
-                         <img src="{{asset('pack1.png')}}" width="500" height="500"> 
+                         <div class="tp-caption Gym-Display " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('pack02.png')}}" width="500" height="500"> 
                          
                           </div>
                       
@@ -60,7 +60,7 @@
                                     
                                       <li data-index="rs-2" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center" data-kenburns="off" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0" data-offsetend="0" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+                        <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
 
 	
