--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -495,15 +495,15 @@
                   stopLoop: "off",
                   stopAfterLoops: -1,
                   stopAtSlide: -1,
-                  shuffle: "off",
-                  autoHeight: "off",
+                  shuffle: "oonff",
+                  autoHeight: "on",
                   hideThumbsOnMobile: "off",
                   hideSliderAtLimit: 0,
                   hideCaptionAtLimit: 0,
                   hideAllCaptionAtLilmit: 0,
                   debugMode: false,
                   fallbacks: {
-                      simplifyAll: "off",
+                      simplifyAll: "on",
                       nextSlideOnWindowFocus: "off",
                       disableFocusListener: false,
                   }
