--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -460,7 +460,7 @@
                       },
                       bullets: {
                           enable: false,
-                          hide_onmobile: true,
+                          hide_onmobile: false,
                           hide_under: 600,
                           style: "metis",
                           hide_onleave: true,
