--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -427,7 +427,7 @@
                   navigation: {
                       keyboardNavigation: "on",
                       keyboard_direction: "horizontal",
-                      mouseScrollNavigation: "off",
+                      mouseScrollNavigation: "on",
                       onHoverStop: "off",
                       touch: {
                           touchenabled: "on",
@@ -439,7 +439,7 @@
                       arrows: {
                           style: "zeus",
                           enable: true,
-                          hide_onmobile: true,
+                          hide_onmobile: false,
                           hide_under: 600,
                           hide_onleave: true,
                           hide_delay: 200,
